force-app/main/default/objects/BSC_Question_Option__c/fields/Option_Score__c.field-meta.xml
<CustomField>
    <fullName>Option_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is multiplied with question&#39;s weight to define the final score for the question</description>
    <label>Option Score</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>