force-app/main/default/objects/BSC_Question_Option__c/fields/Option_Value__c.field-meta.xml
<CustomField>
    <fullName>Option_Value__c</fullName>
    <label>Option Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>