force-app/main/default/objects/BSC_Question_Option__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>BSC_Question__c</referenceTo>
    <relationshipLabel>Question Options</relationshipLabel>
    <relationshipName>Question_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>