force-app/main/default/objects/BSC_Question_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Option_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>